<resources>
    <string name="app_name">UCPS Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ucps">UCPS</string>
    <string name="profile">Profile</string>
    <string name="transactions">Transactions</string>
    <string name="recharges">Recharges</string>
    <string name="summery">Summery</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="developers">Developers</string>
    <string name="logo_image">logo_image</string>
</resources>
